Extend Security APIKey service

--- a/src/plugins/no_data_page/kibana.jsonc
+++ b/src/plugins/no_data_page/kibana.jsonc
@@ -5,6 +5,9 @@
   "plugin": {
     "id": "noDataPage",
     "server": true,
-    "browser": true
+    "browser": true,
+    "optionalPlugins": [
+      "security"
+    ]
   }
 }
