--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1106,6 +1106,8 @@
       "@kbn/newsfeed-plugin/*": ["src/plugins/newsfeed/*"],
       "@kbn/newsfeed-test-plugin": ["test/common/plugins/newsfeed"],
       "@kbn/newsfeed-test-plugin/*": ["test/common/plugins/newsfeed/*"],
+      "@kbn/no-data-page-example-plugin": ["examples/no_data"],
+      "@kbn/no-data-page-example-plugin/*": ["examples/no_data/*"],
       "@kbn/no-data-page-plugin": ["src/plugins/no_data_page"],
       "@kbn/no-data-page-plugin/*": ["src/plugins/no_data_page/*"],
       "@kbn/notifications-plugin": ["x-pack/plugins/notifications"],
