--- a/.buildkite/pipelines/security_solution/api_integration.yml
+++ b/.buildkite/pipelines/security_solution/api_integration.yml
@@ -7,7 +7,7 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 2
 
   - label: Running exception_operators_date_numeric_types:qa:serverless
@@ -15,10 +15,10 @@ steps:
     key: exception_operators_date_numeric_types:qa:serverless
     agents:
       queue: n2-4-spot
-    timeout_in_minutes: 120  
+    timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 2
 
   - label: Running exception_operators_keyword:qa:serverless
@@ -29,9 +29,9 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 2
-  
+
   - label: Running exception_operators_ips:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh exception_operators_ips:qa:serverless
     key: exception_operators_ips:qa:serverless
@@ -40,7 +40,7 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '*'
+        - exit_status: "*"
           limit: 2
 
   - label: Running exception_operators_long:qa:serverless
@@ -51,9 +51,8 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
+        - exit_status: "1"
           limit: 2
-  
 
   - label: Running exception_operators_text:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh exception_operators_text:qa:serverless
@@ -63,7 +62,7 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
+        - exit_status: "1"
           limit: 2
 
   - label: Running rule_creation:qa:serverless
@@ -74,9 +73,9 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
+        - exit_status: "1"
           limit: 2
-          
+
   - label: Running actions:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh actions:qa:serverless
     key: actions:qa:serverless
@@ -85,7 +84,7 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
+        - exit_status: "1"
           limit: 2
 
   - label: Running entity_analytics:qa:serverless
@@ -96,8 +95,8 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
-          limit: 2 
+        - exit_status: "1"
+          limit: 2
 
   - label: Running prebuilt_rules_management:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh prebuilt_rules_management:qa:serverless
@@ -107,7 +106,7 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
+        - exit_status: "1"
           limit: 2
 
   - label: Running prebuilt_rules_bundled_prebuilt_rules_package:qa:serverless
@@ -118,8 +117,8 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
-          limit: 2 
+        - exit_status: "1"
+          limit: 2
 
   - label: Running prebuilt_rules_large_prebuilt_rules_package:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh prebuilt_rules_large_prebuilt_rules_package:qa:serverless
@@ -129,8 +128,8 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
-          limit: 2  
+        - exit_status: "1"
+          limit: 2
 
   - label: Running prebuilt_rules_update_prebuilt_rules_package:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh prebuilt_rules_update_prebuilt_rules_package:qa:serverless
@@ -140,7 +139,7 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
+        - exit_status: "1"
           limit: 2
 
   - label: Running rule_execution_logic:qa:serverless
@@ -151,9 +150,9 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
-          limit: 2 
-        
+        - exit_status: "1"
+          limit: 2
+
   - label: Running user_roles:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh user_roles:qa:serverless
     key: user_roles:qa:serverless
@@ -162,8 +161,8 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
-          limit: 2 
+        - exit_status: "1"
+          limit: 2
 
   - label: Running telemetry:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh telemetry:qa:serverless
@@ -173,6 +172,5 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: '1'
+        - exit_status: "1"
           limit: 2
-          
