--- a/package.json
+++ b/package.json
@@ -893,6 +893,7 @@
     "blurhash": "^2.0.1",
     "brace": "0.11.1",
     "brok": "^5.0.2",
+    "buildkite-test-collector": "^1.6.4",
     "byte-size": "^8.1.0",
     "canvg": "^3.0.9",
     "cbor-x": "^1.3.3",
@@ -995,6 +996,7 @@
     "mime": "^2.4.4",
     "mime-types": "^2.1.27",
     "minimatch": "^3.1.2",
+    "mocha-multi-reporters": "^1.5.1",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "moment-timezone": "^0.5.43",
