[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/cloud_security_posture/tsconfig.json
+++ b/x-pack/plugins/cloud_security_posture/tsconfig.json
@@ -61,6 +61,8 @@
     "@kbn/field-formats-plugin",
     "@kbn/data-view-field-editor-plugin",
     "@kbn/securitysolution-grouping",
+    "@kbn/core-saved-objects-api-server-mocks",
+    "@kbn/cloud-security-posture-plugin",
   ],
   "exclude": ["target/**/*"]
 }
