--- a/x-pack/plugins/log_explorer/tsconfig.json
+++ b/x-pack/plugins/log_explorer/tsconfig.json
@@ -37,7 +37,8 @@
     "@kbn/unified-data-table",
     "@kbn/unified-field-list",
     "@kbn/unified-search-plugin",
-    "@kbn/xstate-utils"
+    "@kbn/xstate-utils",
+    "@kbn/unified-doc-viewer"
   ],
   "exclude": [
     "target/**/*"
