[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/core/injected-metadata/core-injected-metadata-common-internal/tsconfig.json
+++ b/packages/core/injected-metadata/core-injected-metadata-common-internal/tsconfig.json
@@ -15,7 +15,8 @@
     "@kbn/config",
     "@kbn/ui-shared-deps-npm",
     "@kbn/core-base-common",
-    "@kbn/core-custom-branding-common"
+    "@kbn/core-custom-branding-common",
+    "@kbn/core-ui-settings-common"
   ],
   "exclude": [
     "target/**/*",
