[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/src/plugins/saved_search/tsconfig.json
+++ b/src/plugins/saved_search/tsconfig.json
@@ -31,7 +31,7 @@
     "@kbn/discover-utils",
     "@kbn/logging",
     "@kbn/core-plugins-server",
-    "@kbn/unified-data-table",
+    "@kbn/utility-types",
   ],
   "exclude": [
     "target/**/*",
