--- a/x-pack/plugins/maps/kibana.jsonc
+++ b/x-pack/plugins/maps/kibana.jsonc
@@ -49,7 +49,8 @@
       "kibanaUtils",
       "usageCollection",
       "unifiedSearch",
-      "fieldFormats"
+      "fieldFormats",
+      "textBasedLanguages"
     ],
     "extraPublicDirs": [
       "common"
