[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/packages/core/theme/core-theme-browser-internal/tsconfig.json
+++ b/packages/core/theme/core-theme-browser-internal/tsconfig.json
@@ -19,6 +19,7 @@
     "@kbn/test-jest-helpers",
     "@kbn/react-kibana-context-theme",
     "@kbn/core-injected-metadata-common-internal",
+    "@kbn/ui-theme",
   ],
   "exclude": [
     "target/**/*",
