--- a/x-pack/plugins/observability_ai_assistant/kibana.jsonc
+++ b/x-pack/plugins/observability_ai_assistant/kibana.jsonc
@@ -20,6 +20,7 @@
       "share",
       "taskManager",
       "triggersActionsUi",
+      "uiActions",
       "dataViews"
     ],
     "requiredBundles": [ "kibanaReact", "kibanaUtils"],
