--- a/x-pack/plugins/observability_ai_assistant/tsconfig.json
+++ b/x-pack/plugins/observability_ai_assistant/tsconfig.json
@@ -7,6 +7,7 @@
     "../../../typings/**/*",
     "common/**/*",
     "public/**/*",
+    "scripts/**/*",
     "typings/**/*",
     "public/**/*.json",
     "server/**/*"
