--- a/package.json
+++ b/package.json
@@ -934,6 +934,7 @@
     "exponential-backoff": "^3.1.1",
     "extract-zip": "^2.0.1",
     "fast-deep-equal": "^3.1.1",
+    "fast-glob": "^3.3.2",
     "fflate": "^0.6.9",
     "file-saver": "^1.3.8",
     "fnv-plus": "^1.3.1",
@@ -944,7 +945,6 @@
     "get-port": "^5.0.0",
     "getopts": "^2.2.5",
     "getos": "^3.1.0",
-    "glob": "^10.3.10",
     "globby": "^11.1.0",
     "gpt-tokenizer": "^2.1.2",
     "handlebars": "4.7.8",
