--- a/.buildkite/pipelines/quality-gates/pipeline.kibana-tests.yaml
+++ b/.buildkite/pipelines/quality-gates/pipeline.kibana-tests.yaml
@@ -10,6 +10,11 @@
 #
 # Docs: https://docs.elastic.dev/serverless/qualitygates
 
+agent:
+  cpu: 2
+  ephemeralStorage: "20G"
+  memory: "8G"
+
 env:
   TEAM_CHANNEL: "#kibana-mission-control"
   ENVIRONMENT: ${ENVIRONMENT?}
