--- a/.buildkite/ftr_configs.yml
+++ b/.buildkite/ftr_configs.yml
@@ -27,6 +27,7 @@ disabled:
   - x-pack/test/functional/config.edge.js
 
   # Cypress configs, for now these are still run manually
+  - test/examples/cypress/config.ts
   - x-pack/test/fleet_cypress/cli_config.ts
   - x-pack/test/fleet_cypress/config.ts
   - x-pack/test/fleet_cypress/visual_config.ts
