--- a/src/plugins/unified_search/tsconfig.json
+++ b/src/plugins/unified_search/tsconfig.json
@@ -42,8 +42,7 @@
     "@kbn/core-doc-links-browser",
     "@kbn/core-lifecycle-browser",
     "@kbn/ml-string-hash",
-    "@kbn/calculate-width-from-char-count",
-    "@kbn/unified-data-table"
+    "@kbn/calculate-width-from-char-count"
   ],
   "exclude": [
     "target/**/*",
