--- a/package.json
+++ b/package.json
@@ -1001,6 +1001,7 @@
     "monaco-editor": "^0.24.0",
     "monaco-yaml": "3.2.1",
     "mustache": "^2.3.2",
+    "node-canvas": "^2.9.0",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.6.2",
