--- a/x-pack/plugins/security_solution/tsconfig.json
+++ b/x-pack/plugins/security_solution/tsconfig.json
@@ -184,6 +184,7 @@
     "@kbn/zod-helpers",
     "@kbn/core-http-common",
     "@kbn/search-errors",
-    "@kbn/stack-connectors-plugin"
+    "@kbn/stack-connectors-plugin",
+    "@kbn/elastic-assistant-common"
   ]
 }
