--- a/.buildkite/pipelines/security_solution/api_integration.yml
+++ b/.buildkite/pipelines/security_solution/api_integration.yml
@@ -7,7 +7,7 @@ steps:
     timeout_in_minutes: 120
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 2
 
   - label: Running exception_operators_date_numeric_types:qa:serverless
@@ -54,6 +54,17 @@ steps:
         - exit_status: '1'
           limit: 2
 
+  - label: Running exception_operators_text:qa:serverless
+    command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh exception_operators_text:qa:serverless
+    key: exception_operators_text:qa:serverless
+    agents:
+      queue: n2-4-spot
+    timeout_in_minutes: 120
+    retry:
+      automatic:
+        - exit_status: '1'
+          limit: 2
+
   - label: Running rule_creation:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh rule_creation:qa:serverless
     key: rule_creation:qa:serverless
@@ -87,6 +98,17 @@ steps:
         - exit_status: '1'
           limit: 2
 
+  - label: Running prebuilt_rules_management:qa:serverless
+    command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh prebuilt_rules_management:qa:serverless
+    key: prebuilt_rules_management:qa:serverless
+    agents:
+      queue: n2-4-spot
+    timeout_in_minutes: 120
+    retry:
+      automatic:
+        - exit_status: '1'
+          limit: 2
+
   - label: Running prebuilt_rules_bundled_prebuilt_rules_package:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh prebuilt_rules_bundled_prebuilt_rules_package:qa:serverless
     key: prebuilt_rules_bundled_prebuilt_rules_package:qa:serverless
@@ -101,6 +123,17 @@ steps:
   - label: Running prebuilt_rules_large_prebuilt_rules_package:qa:serverless
     command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh prebuilt_rules_large_prebuilt_rules_package:qa:serverless
     key: prebuilt_rules_large_prebuilt_rules_package:qa:serverless
+    agents:
+      queue: n2-4-spot
+    timeout_in_minutes: 120
+    retry:
+      automatic:
+        - exit_status: '1'
+          limit: 2
+
+  - label: Running prebuilt_rules_update_prebuilt_rules_package:qa:serverless
+    command: .buildkite/scripts/pipelines/security_solution_quality_gate/api-integration-tests.sh prebuilt_rules_update_prebuilt_rules_package:qa:serverless
+    key: prebuilt_rules_update_prebuilt_rules_package:qa:serverless
     agents:
       queue: n2-4-spot
     timeout_in_minutes: 120
