--- a/x-pack/plugins/log_explorer/tsconfig.json
+++ b/x-pack/plugins/log_explorer/tsconfig.json
@@ -34,10 +34,10 @@
     "@kbn/kibana-react-plugin",
     "@kbn/kibana-utils-plugin",
     "@kbn/navigation-plugin",
-    "@kbn/react-field"
+    "@kbn/react-field",
     "@kbn/share-plugin",
     "@kbn/unified-data-table",
-    "@kbn/unified-doc-viewer"
+    "@kbn/unified-doc-viewer",
     "@kbn/unified-field-list",
     "@kbn/unified-search-plugin",
     "@kbn/xstate-utils"
