--- a/x-pack/plugins/observability_ai_assistant/tsconfig.json
+++ b/x-pack/plugins/observability_ai_assistant/tsconfig.json
@@ -7,6 +7,7 @@
     "../../../typings/**/*",
     "common/**/*",
     "public/**/*",
+    "scripts/**/*",
     "typings/**/*",
     "public/**/*.json",
     "server/**/*"
@@ -48,7 +49,10 @@
     "@kbn/licensing-plugin",
     "@kbn/share-plugin",
     "@kbn/utility-types-jest",
-    "@kbn/analytics-client"
+    "@kbn/analytics-client",
+    "@kbn/tooling-log",
+    "@kbn/babel-register",
+    "@kbn/dev-cli-runner"
   ],
   "exclude": ["target/**/*"]
 }
