--- a/package.json
+++ b/package.json
@@ -934,6 +934,7 @@
     "exponential-backoff": "^3.1.1",
     "extract-zip": "^2.0.1",
     "fast-deep-equal": "^3.1.1",
+    "fast-glob": "^3.3.2",
     "fflate": "^0.6.9",
     "file-saver": "^1.3.8",
     "fnv-plus": "^1.3.1",
@@ -1634,6 +1635,7 @@
     "supertest": "^6.3.3",
     "supports-color": "^7.0.0",
     "svgo": "^2.8.0",
+    "table": "^6.8.1",
     "tape": "^5.0.1",
     "tempy": "^0.3.0",
     "terser": "^5.16.5",
