[chore] Make plugin dependencies explicit; point out lifecycle inconsistencies

--- a/x-pack/plugins/serverless_observability/kibana.jsonc
+++ b/x-pack/plugins/serverless_observability/kibana.jsonc
@@ -20,11 +20,12 @@
       "serverless",
       "observability",
       "observabilityShared",
-      "kibanaReact",
       "management",
       "cloud"
     ],
     "optionalPlugins": [],
-    "requiredBundles": []
+    "requiredBundles": [
+      "kibanaReact",
+    ]
   }
 }
