Delete stale provider code from serverlessObservability

--- a/x-pack/plugins/serverless_observability/kibana.jsonc
+++ b/x-pack/plugins/serverless_observability/kibana.jsonc
@@ -24,8 +24,6 @@
       "cloud"
     ],
     "optionalPlugins": [],
-    "requiredBundles": [
-      "kibanaReact",
-    ]
+    "requiredBundles": []
   }
 }
