Added package to hold routerProps utils

--- a/x-pack/plugins/dataset_quality/tsconfig.json
+++ b/x-pack/plugins/dataset_quality/tsconfig.json
@@ -26,7 +26,8 @@
     "@kbn/io-ts-utils",
     "@kbn/observability-plugin",
     "@kbn/es-types",
-    "@kbn/deeplinks-observability"
+    "@kbn/deeplinks-observability",
+    "@kbn/router-utils",
   ],
   "exclude": [
     "target/**/*",
