--- a/x-pack/plugins/log_explorer/tsconfig.json
+++ b/x-pack/plugins/log_explorer/tsconfig.json
@@ -40,7 +40,8 @@
     "@kbn/xstate-utils",
     "@kbn/ecs",
     "@kbn/react-field",
-    "@kbn/observability-shared-plugin"
+    "@kbn/observability-shared-plugin",
+    "@kbn/router-utils",
   ],
   "exclude": [
     "target/**/*"
