--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "@kbn/application-usage-test-plugin": "link:x-pack/test/usage_collection/plugins/application_usage_test",
     "@kbn/assetManager-plugin": "link:x-pack/plugins/asset_manager",
     "@kbn/audit-log-plugin": "link:x-pack/test/security_api_integration/plugins/audit_log",
+    "@kbn/audit-plugin": "link:x-pack/plugins/audit",
     "@kbn/banners-plugin": "link:x-pack/plugins/banners",
     "@kbn/bfetch-error": "link:packages/kbn-bfetch-error",
     "@kbn/bfetch-explorer-plugin": "link:examples/bfetch_explorer",
