--- a/x-pack/plugins/alerting/kibana.jsonc
+++ b/x-pack/plugins/alerting/kibana.jsonc
@@ -25,6 +25,7 @@
       "management",
       "esUiShared",
       "unifiedSearch",
+      "audit",
     ],
     "optionalPlugins": [
       "usageCollection",
