--- a/x-pack/plugins/observability_ai_assistant/tsconfig.json
+++ b/x-pack/plugins/observability_ai_assistant/tsconfig.json
@@ -52,7 +52,8 @@
     "@kbn/analytics-client",
     "@kbn/tooling-log",
     "@kbn/babel-register",
-    "@kbn/dev-cli-runner"
+    "@kbn/dev-cli-runner",
+    "@kbn/core-lifecycle-browser"
   ],
   "exclude": ["target/**/*"]
 }
