--- a/src/plugins/no_data_page/kibana.jsonc
+++ b/src/plugins/no_data_page/kibana.jsonc
@@ -5,9 +5,6 @@
   "plugin": {
     "id": "noDataPage",
     "server": true,
-    "browser": true,
-    "optionalPlugins": [
-      "security"
-    ]
+    "browser": true
   }
 }
