--- a/x-pack/plugins/triggers_actions_ui/kibana.jsonc
+++ b/x-pack/plugins/triggers_actions_ui/kibana.jsonc
@@ -25,7 +25,8 @@
       "actions",
       "dashboard",
       "licensing",
-      "expressions"
+      "expressions",
+      "audit"
     ],
     "optionalPlugins": [
       "cloud",
