--- a/x-pack/plugins/triggers_actions_ui/tsconfig.json
+++ b/x-pack/plugins/triggers_actions_ui/tsconfig.json
@@ -58,7 +58,8 @@
     "@kbn/core-saved-objects-api-server",
     "@kbn/serverless",
     "@kbn/field-formats-plugin",
-    "@kbn/triggers-actions-ui-types"
+    "@kbn/triggers-actions-ui-types",
+    "@kbn/audit-plugin"
   ],
   "exclude": ["target/**/*"]
 }
