--- a/.buildkite/pipelines/security_solution/security_solution_cypress.yml
+++ b/.buildkite/pipelines/security_solution/security_solution_cypress.yml
@@ -80,11 +80,11 @@ steps:
     parallelism: 1
     retry:
       automatic:
-        - exit_status: '*'
-          limit: 1   
+        - exit_status: "*"
+          limit: 1
 
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:entity_analytics
-    label: 'Serverless MKI QA Entity Analytics - Security Solution Cypress Tests'
+    label: "Serverless MKI QA Entity Analytics - Security Solution Cypress Tests"
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -92,5 +92,5 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: '*'
-          limit: 1                    
+        - exit_status: "*"
+          limit: 1
