--- a/.buildkite/pipelines/security_solution/security_solution_cypress.yml
+++ b/.buildkite/pipelines/security_solution/security_solution_cypress.yml
@@ -1,6 +1,6 @@
 steps:
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:explore
-    label: "Serverless MKI QA Explore - Security Solution Cypress Tests"
+    label: 'Serverless MKI QA Explore - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -8,11 +8,11 @@ steps:
     parallelism: 4
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:investigations
-    label: "Serverless MKI QA Investigations - Security Solution Cypress Tests"
+    label: 'Serverless MKI QA Investigations - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -20,11 +20,11 @@ steps:
     parallelism: 8
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:rule_management
-    label: "Serverless MKI QA Rule Management - Security Solution Cypress Tests"
+    label: 'Serverless MKI QA Rule Management - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -32,11 +32,11 @@ steps:
     parallelism: 8
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:rule_management:prebuilt_rules
-    label: "Serverless MKI QA Rule Management - Prebuilt Rules - Security Solution Cypress Tests"
+    label: 'Serverless MKI QA Rule Management - Prebuilt Rules - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -44,11 +44,11 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:detection_engine
-    label: "Serverless MKI QA Detection Engine - Security Solution Cypress Tests"
+    label: 'Serverless MKI QA Detection Engine - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -56,11 +56,11 @@ steps:
     parallelism: 8
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:detection_engine:exceptions
-    label: "Serverless MKI QA Detection Engine - Exceptions - Security Solution Cypress Tests"
+    label: 'Serverless MKI QA Detection Engine - Exceptions - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -68,11 +68,11 @@ steps:
     parallelism: 6
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:ai_assistant
-    label: "Serverless MKI QA AI Assistant - Security Solution Cypress Tests"
+    label: 'Serverless MKI QA AI Assistant - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -80,11 +80,11 @@ steps:
     parallelism: 1
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
 
   - command: .buildkite/scripts/pipelines/security_solution_quality_gate/security_solution_cypress/mki_security_solution_cypress.sh cypress:run:qa:serverless:entity_analytics
-    label: "Serverless MKI QA Entity Analytics - Security Solution Cypress Tests"
+    label: 'Serverless MKI QA Entity Analytics - Security Solution Cypress Tests'
     agents:
       queue: n2-4-spot
     # TODO : Revise the timeout when the pipeline will be officially integrated with the quality gate.
@@ -92,5 +92,5 @@ steps:
     parallelism: 2
     retry:
       automatic:
-        - exit_status: "*"
+        - exit_status: '*'
           limit: 1
