[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/src/plugins/data_view_management/tsconfig.json
+++ b/src/plugins/data_view_management/tsconfig.json
@@ -35,6 +35,8 @@
     "@kbn/shared-ux-router",
     "@kbn/core-ui-settings-browser",
     "@kbn/react-kibana-context-render",
+    "@kbn/deeplinks-analytics",
+    "@kbn/share-plugin",
   ],
   "exclude": [
     "target/**/*",
