--- a/package.json
+++ b/package.json
@@ -1320,6 +1320,8 @@
     "@storybook/react-docgen-typescript-plugin": "^1.0.1",
     "@storybook/testing-react": "^1.3.0",
     "@storybook/theming": "^6.5.16",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.100",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.1",
@@ -1634,6 +1636,7 @@
     "supertest": "^6.3.3",
     "supports-color": "^7.0.0",
     "svgo": "^2.8.0",
+    "swc-loader": "^0.2.3",
     "tape": "^5.0.1",
     "tempy": "^0.3.0",
     "terser": "^5.16.5",
