--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -844,6 +844,8 @@
       "@kbn/ftr-apis-plugin/*": ["src/plugins/ftr_apis/*"],
       "@kbn/ftr-common-functional-services": ["packages/kbn-ftr-common-functional-services"],
       "@kbn/ftr-common-functional-services/*": ["packages/kbn-ftr-common-functional-services/*"],
+      "@kbn/ftr-common-functional-ui-services": ["packages/kbn-ftr-common-functional-ui-services"],
+      "@kbn/ftr-common-functional-ui-services/*": ["packages/kbn-ftr-common-functional-ui-services/*"],
       "@kbn/ftr-screenshot-filename": ["packages/kbn-ftr-screenshot-filename"],
       "@kbn/ftr-screenshot-filename/*": ["packages/kbn-ftr-screenshot-filename/*"],
       "@kbn/functional-with-es-ssl-cases-test-plugin": ["x-pack/test/functional_with_es_ssl/plugins/cases"],
