Onboard reporting into CM

--- a/x-pack/plugins/reporting/kibana.jsonc
+++ b/x-pack/plugins/reporting/kibana.jsonc
@@ -24,7 +24,8 @@
       "embeddable",
       "screenshotMode",
       "share",
-      "features"
+      "features",
+      "contentManagement",
     ],
     "optionalPlugins": [
       "security",
