--- a/config/serverless.oblt.yml
+++ b/config/serverless.oblt.yml
@@ -5,6 +5,8 @@ enterpriseSearch.enabled: false
 xpack.cloudSecurityPosture.enabled: false
 xpack.infra.enabled: true
 xpack.securitySolution.enabled: false
+xpack.uptime.enabled: true
+xpack.legacy_uptime.enabled: true
 
 ## Cloud settings
 xpack.cloud.serverless.project_type: observability
@@ -34,6 +36,11 @@ xpack.observability.createO11yGenericFeatureId: true
 ## APM Serverless Onboarding flow
 xpack.apm.serverlessOnboarding: true
 
+# Synthetics mTLS cert locations
+xpack.uptime.service.tls.certificate: /mnt/elastic-internal/http-certs/tls.crt
+xpack.uptime.service.tls.key: /mnt/elastic-internal/http-certs/tls.key
+xpack.uptime.service.manifestUrl: https://manifest.synthetics.qa.cld.elstc.co/v1/manifest.json
+
 # Fleet specific configuration
 xpack.fleet.internal.registry.capabilities: ['apm', 'observability']
 xpack.fleet.internal.registry.kibanaVersionCheckEnabled: false
@@ -45,10 +52,6 @@ xpack.fleet.internal.registry.excludePackages: [
     'endpoint',
     'beaconing',
     'osquery_manager',
-
-    # synthetics is not enabled yet
-    'synthetics',
-    'synthetics_dashboards',
 
     # Removed in 8.11 integrations
     'cisco',
