[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/observability_ai_assistant/tsconfig.json
+++ b/x-pack/plugins/observability_ai_assistant/tsconfig.json
@@ -53,7 +53,8 @@
     "@kbn/tooling-log",
     "@kbn/babel-register",
     "@kbn/dev-cli-runner",
-    "@kbn/core-analytics-browser"
+    "@kbn/core-analytics-browser",
+    "@kbn/core-http-browser"
   ],
   "exclude": ["target/**/*"]
 }
