[Security solution] AI Assistant persistent storage.

--- a/x-pack/plugins/elastic_assistant/kibana.jsonc
+++ b/x-pack/plugins/elastic_assistant/kibana.jsonc
@@ -11,7 +11,9 @@
       "actions",
       "data",
       "ml",
-      "taskManager"
+      "taskManager",
+      "spaces",
+      "security"
     ]
   }
 }
