[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/observability/tsconfig.json
+++ b/x-pack/plugins/observability/tsconfig.json
@@ -98,7 +98,8 @@
     "@kbn/dashboard-plugin",
     "@kbn/calculate-auto",
     "@kbn/task-manager-plugin",
-    "@kbn/core-elasticsearch-client-server-mocks"
+    "@kbn/core-elasticsearch-client-server-mocks",
+    "@kbn/core-saved-objects-api-server-mocks"
   ],
   "exclude": [
     "target/**/*"
