--- a/x-pack/plugins/cloud_security_posture/tsconfig.json
+++ b/x-pack/plugins/cloud_security_posture/tsconfig.json
@@ -18,6 +18,7 @@
     "@kbn/data-plugin",
     "@kbn/fleet-plugin",
     "@kbn/fleet-plugin",
+    "@kbn/alerting-plugin",
     "@kbn/task-manager-plugin",
     "@kbn/security-plugin",
     "@kbn/config-schema",
@@ -61,7 +62,7 @@
     "@kbn/field-formats-plugin",
     "@kbn/data-view-field-editor-plugin",
     "@kbn/securitysolution-grouping",
-    "@kbn/core-saved-objects-api-server-mocks",
+    "@kbn/core-saved-objects-api-server-mocks"
   ],
   "exclude": ["target/**/*"]
 }
