[CI] Auto-commit changed files from 'node scripts/lint_ts_projects --fix'

--- a/x-pack/plugins/security_solution/tsconfig.json
+++ b/x-pack/plugins/security_solution/tsconfig.json
@@ -185,6 +185,7 @@
     "@kbn/core-http-common",
     "@kbn/search-errors",
     "@kbn/stack-connectors-plugin",
-    "@kbn/elastic-assistant-common"
+    "@kbn/elastic-assistant-common",
+    "@kbn/lens-embeddable-utils"
   ]
 }
