--- a/package.json
+++ b/package.json
@@ -1176,6 +1176,7 @@
     "@kbn/ci-stats-reporter": "link:packages/kbn-ci-stats-reporter",
     "@kbn/ci-stats-shipper-cli": "link:packages/kbn-ci-stats-shipper-cli",
     "@kbn/cli-dev-mode": "link:packages/kbn-cli-dev-mode",
+    "@kbn/code-owners": "link:packages/kbn-code-owners",
     "@kbn/core-analytics-browser-mocks": "link:packages/core/analytics/core-analytics-browser-mocks",
     "@kbn/core-analytics-server-mocks": "link:packages/core/analytics/core-analytics-server-mocks",
     "@kbn/core-application-browser-mocks": "link:packages/core/application/core-application-browser-mocks",
@@ -1558,6 +1559,7 @@
     "html": "1.0.0",
     "html-loader": "^1.3.2",
     "http-proxy": "^1.18.1",
+    "ignore": "^5.3.0",
     "is-path-inside": "^3.0.2",
     "jest": "^29.6.1",
     "jest-axe": "^5.0.0",
