[Dataset quality] Open in Log explorer action (#173272)
Closes https://github.com/elastic/kibana/issues/170236.

### Changes

This PR focuses on adding an action per dataset + namespace to navigate
to Observability log explorer. At the same time I took the opportunity
to update `Open in discover` link to include the controls present in
`Observability Log Explorer` state (atm just `namespace`)

1. Extracted `getRouterLinkProps` to a new package for reusability.
2. New `Actions` column was added to table.
3. `LogExplorerLink ` component was introduced, to reuse the navigation
logic between the table and the flyout.
4. `getDiscoverFiltersFromState` was added to combine state filters and
controls into discover state when navigating to discover

#### Demo


https://github.com/elastic/kibana/assets/1313018/a3f38615-d8ae-432b-ba7b-05a6901f870c

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1248,6 +1248,8 @@
       "@kbn/rison/*": ["packages/kbn-rison/*"],
       "@kbn/rollup-plugin": ["x-pack/plugins/rollup"],
       "@kbn/rollup-plugin/*": ["x-pack/plugins/rollup/*"],
+      "@kbn/router-utils": ["packages/kbn-router-utils"],
+      "@kbn/router-utils/*": ["packages/kbn-router-utils/*"],
       "@kbn/routing-example-plugin": ["examples/routing_example"],
       "@kbn/routing-example-plugin/*": ["examples/routing_example/*"],
       "@kbn/rrule": ["packages/kbn-rrule"],
