--- a/x-pack/plugins/log_explorer/tsconfig.json
+++ b/x-pack/plugins/log_explorer/tsconfig.json
@@ -35,12 +35,13 @@
     "@kbn/kibana-utils-plugin",
     "@kbn/navigation-plugin",
     "@kbn/react-field",
+    "@kbn/router-utils",
     "@kbn/share-plugin",
     "@kbn/unified-data-table",
     "@kbn/unified-doc-viewer",
     "@kbn/unified-field-list",
     "@kbn/unified-search-plugin",
-    "@kbn/xstate-utils"
+    "@kbn/xstate-utils",
   ],
   "exclude": [
     "target/**/*"
