--- a/src/plugins/data/tsconfig.json
+++ b/src/plugins/data/tsconfig.json
@@ -50,7 +50,8 @@
     "@kbn/search-errors",
     "@kbn/search-response-warnings",
     "@kbn/shared-ux-link-redirect-app",
-    "@kbn/bfetch-error"
+    "@kbn/bfetch-error",
+    "@kbn/es-types"
   ],
   "exclude": [
     "target/**/*",
