[Obs AI Assistant] E2E tests for conversation view (#173485)
Adds some basic E2E tests for the conversation view.

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>
(cherry picked from commit f67afe2866014cfbc21755134950d7abaa8cf8c4)

# Conflicts:
#	.github/CODEOWNERS

--- a/x-pack/plugins/observability_ai_assistant/tsconfig.json
+++ b/x-pack/plugins/observability_ai_assistant/tsconfig.json
@@ -54,6 +54,7 @@
     "@kbn/babel-register",
     "@kbn/dev-cli-runner",
     "@kbn/core-analytics-browser",
+    "@kbn/core-http-browser",
     "@kbn/security-plugin-types-common"
   ],
   "exclude": ["target/**/*"]
