Add indexer logic to Search Index

--- a/x-pack/plugins/index_management/kibana.jsonc
+++ b/x-pack/plugins/index_management/kibana.jsonc
@@ -14,7 +14,8 @@
       "home",
       "management",
       "features",
-      "share"
+      "share",
+      "contentManagement",
     ],
     "optionalPlugins": [
       "security",
