wip saved objects in embed modal

--- a/src/plugins/share/kibana.jsonc
+++ b/src/plugins/share/kibana.jsonc
@@ -9,7 +9,8 @@
     "browser": true,
     "requiredBundles": [
       "kibanaReact",
-      "kibanaUtils"
+      "kibanaUtils", 
+      "savedObjectsManagement"
     ]
   }
 }
