Include filter in logs shared locators query.

--- a/x-pack/plugins/logs_shared/kibana.jsonc
+++ b/x-pack/plugins/logs_shared/kibana.jsonc
@@ -14,7 +14,8 @@
       "usageCollection",
       "observabilityShared",
       "observabilityAIAssistant",
-      "share"
+      "share",
+      "metricsDataAccess"
     ],
     "requiredBundles": ["kibanaUtils", "kibanaReact"],
     "extraPublicDirs": ["common"]
