Exclude metrics data access reference.

--- a/x-pack/plugins/logs_shared/kibana.jsonc
+++ b/x-pack/plugins/logs_shared/kibana.jsonc
@@ -14,8 +14,7 @@
       "usageCollection",
       "observabilityShared",
       "observabilityAIAssistant",
-      "share",
-      "metricsDataAccess"
+      "share"
     ],
     "requiredBundles": ["kibanaUtils", "kibanaReact"],
     "extraPublicDirs": ["common"]
