--- a/x-pack/plugins/logs_shared/tsconfig.json
+++ b/x-pack/plugins/logs_shared/tsconfig.json
@@ -28,7 +28,6 @@
     "@kbn/ui-actions-plugin",
     "@kbn/observability-ai-assistant-plugin",
     "@kbn/deeplinks-observability",
-    "@kbn/share-plugin",
-    "@kbn/metrics-data-access-plugin"
+    "@kbn/share-plugin"
   ]
 }
