--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -206,6 +206,10 @@ spec:
       repository: elastic/kibana
       provider_settings:
         trigger_mode: none
+      schedules:
+        daily:
+          branch: main
+          cronline: "@daily"
       pipeline_file: ".buildkite/pipelines/sonarqube.yml"
       teams:
         kibana-operations:
