Use *.spec.ts instead of *.test.ts

--- a/x-pack/plugins/observability_ai_assistant/scripts/evaluation/.eslintrc.json
+++ b/x-pack/plugins/observability_ai_assistant/scripts/evaluation/.eslintrc.json
@@ -2,7 +2,7 @@
   "overrides": [
     {
       "files": [
-        "**/*.test.ts"
+        "**/*.spec.ts"
       ],
       "rules": {
         "@kbn/imports/require_import": [
