Add log rate analysis to the custom threshold alert details page

--- a/x-pack/plugins/observability/kibana.jsonc
+++ b/x-pack/plugins/observability/kibana.jsonc
@@ -20,6 +20,7 @@
       "dataViews",
       "dataViewEditor",
       "embeddable",
+      "fieldFormats",
       "uiActions",
       "presentationUtil",
       "exploratoryView",
@@ -27,6 +28,7 @@
       "files",
       "inspector",
       "lens",
+      "logsShared",
       "observabilityShared",
       "observabilityAIAssistant",
       "ruleRegistry",
